# Crypto-Arbitrage-Toolbox

./: .gitignore  BTC-08NOV24_15.parquet  BTC-08NOV24_5.parquet  BTC-18OCT24_15.json  BTC-25OCT24_M.parquet  BTC-26SEP25_15.json  BTC-26SEP25_3.json  BTC-27JUN25_15.parquet  BTC-27JUN25_5.parquet  BTC-28MAR25_M.parquet  BTC-29NOV24_15.parquet  BTC-29NOV24_5.parquet  BTCUSDC_15.parquet  BTCUSDT_15.parquet  README.md  bybit.py  conda_env.yaml  conda_requirements.txt  deribit.py  deribitClient.py  main.py  pyproject.toml  req.txt  requirements.txt  schedule_test.py  showcase.ipynb  test.py
Bybit/: TODO.md  analyser.py  apiFetcher.py  bybit.py  bybit_old.py  client.py  greekMaster.py  scheduler.py  testing.py  utils.py
docs/: architecture.md  index.md  setup.md  strategies.md
src/: main.py  showcase.ipynb
src/Bybit/: client.py  greekMaster.py  simulator.py
src/Deribit/: deribit.py
src/bybit/: __init__.py  analyser.py  api_fetcher.py  client.py  greek_master.py  simulator.py  utils.py
store/: BTC-03JAN25_1.parquet  BTC-03JAN25_15.parquet  BTC-03JAN25_5.parquet  BTC-06DEC24_1.parquet  BTC-06DEC24_15.parquet  BTC-06DEC24_5.parquet  BTC-07FEB25_1.parquet  BTC-07FEB25_15.parquet  BTC-07FEB25_5.parquet  BTC-08NOV24_15.parquet  BTC-08NOV24_5.parquet  BTC-10JAN25_1.parquet  BTC-10JAN25_15.parquet  BTC-10JAN25_5.parquet  BTC-13DEC24_1.parquet  BTC-13DEC24_15.parquet  BTC-13DEC24_5.parquet  BTC-14FEB25_1.parquet  BTC-14FEB25_15.parquet  BTC-14FEB25_5.parquet  BTC-15NOV24_1.parquet  BTC-15NOV24_15.parquet  BTC-15NOV24_5.parquet  BTC-17JAN25_1.parquet  BTC-17JAN25_15.parquet  BTC-17JAN25_5.parquet  BTC-18OCT24_1.parquet  BTC-18OCT24_15.json  BTC-18OCT24_15.parquet  BTC-18OCT24_5.json  BTC-18OCT24_5.parquet  BTC-18OCT24_D.json  BTC-18OCT24_D.parquet  BTC-20DEC24_1.parquet  BTC-20DEC24_15.parquet  BTC-20DEC24_5.parquet  BTC-21FEB25_1.parquet  BTC-21FEB25_15.parquet  BTC-21FEB25_5.parquet  BTC-22NOV24_1.parquet  (+44 more)
(+2 files in other folders)
