[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "KairosEdge"
version = "0.0.1"
authors = [{ name = "Aziz-Zeghal" }]
description = "Crypto CEX arbitrage Toolbox"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[tool.setuptools]
packages = ["Bybit"]
